# vortex

./: .gitignore  LICENSE  README.md  meson.build
include/vortex/Frontend/: Diag.h  Lexer.h
lib/: meson.build
lib/Frontend/: Diag.cpp
tools/: meson.build
tools/vortexc/: main.cpp  meson.build
